# qorme-py

./: .coveragerc  .gitignore  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: qa.yml  test-core.yml  test-django.yml
docs/: architecture.md  configuration.md
docs/contrib/: celery.md  taggit.md  wagtail.md
docs/contrib/core/: celery.md
docs/contributing/: architecture.md  ideas.md  profiling.md  roadmap.md  sampling.md  select_related_vs_prefetch_related.md
docs/django/: setup.md
docs/django/contrib/: taggit.md  wagtail.md
docs/django/domains/: columns.md  queries.md  relations.md  requests.md  template.md
docs/django/optimization/: defer-columns.md  index.md  prefetch-relations.md
docs/domains/: index.md  ingest.md  ml.md  psycopg.md  sqlite.md
integrations/qorme-django/: .coveragerc  LICENSE  Makefile  README.md  pyproject.toml
integrations/qorme-django/src/qorme_django/: apps.py  constants.py  defaults.py
integrations/qorme-django/src/qorme_django/contrib/taggit/: relations.py
integrations/qorme-django/src/qorme_django/contrib/wagtail/: page_render.py
integrations/qorme-django/src/qorme_django/domains/: cli.py  columns.py  queries.py  relations.py  requests.py  template.py
integrations/qorme-django/src/qorme_django/domains/ml/: defer_columns.py  prefetch_relations.py
integrations/qorme-django/tests/: settings.py  test_cli.py  test_columns.py  test_queries.py  test_relations.py  test_requests.py  test_template.py  utils.py
integrations/qorme-django/tests/ml/: test_columns.py
integrations/qorme-django/tests/test_app/: apps.py  factories.py  models.py  urls.py  views.py
integrations/qorme-django/tests/test_app/fixtures/: data.json  small.json
integrations/qorme-django/tests/test_app/management/commands/: test_command.py
integrations/qorme-django/tests/test_app/migrations/: 0001_initial.py
integrations/qorme-django/tests/test_app/templates/test_app/: films.html  stores.html
integrations/qorme-django/tests/test_app/templates/test_app/includes/: address.html  staff_member.html  store.html
integrations/qorme-django/tests/test_app/templatetags/: test_app_tags.py
src/qorme/: defaults.py  deps.py  domain.py  events.py  manager.py
src/qorme/client/: auth.py  client.py  dsn.py
src/qorme/context/: datastructures.py  tracking.py  types.py
src/qorme/contrib/celery/: tracking.py
src/qorme/db/: datastructures.py  tracking.py  types.py
src/qorme/ingest/: ingest.py  payload.py  queue.py
src/qorme/ml/: datastructures.py  domain.py  instance.py  store.py
src/qorme/orm/: datastructures.py  tracking.py  types.py
src/qorme/utils/: async_worker.py  bitset.c  bitset.pyi  bitset.pyx  config.py  datetime.py  encoder.py  gzip.py  lru_cache.c  lru_cache.pxd  lru_cache.pyx  module_loading.py  traceback.c  traceback.pyi  traceback.pyx  wrapper.py
tests/: mock.py  test_domain.py  test_events.py  test_manager.py
tests/client/: test_auth.py  test_client.py  test_dsn.py
tests/contrib/celery_tests/: app.py  test_celery.py
tests/db/integrations/: test_psycopg2.py  test_psycopg3.py  test_sqlite.py
tests/ingest/: test_ingest.py  test_queue.py
tests/ml/: test_store.py
tests/utils/: test_async_worker.py  test_bitset.py  test_config.py  test_datetime.py  test_encoder.py  test_gzip.py  test_lru_cache.py  test_wrapper.py
(+3 files in other folders)
